--- a/src/createbox/CMakeLists.txt
+++ b/src/createbox/CMakeLists.txt
@@ -7,7 +7,7 @@ INCLUDE( ${ITK_USE_FILE} )
 
 ADD_EXECUTABLE(pxcreatebox createbox.cxx itkBoxSpatialFunction.txx itkBoxSpatialFunction.h)
 
-TARGET_LINK_LIBRARIES(pxcreatebox pxcommon ITKBasicFilters ITKIO ITKCommon)
+TARGET_LINK_LIBRARIES(pxcreatebox pxcommon ${ITK_LIBRARIES})
 
 INSTALL( TARGETS pxcreatebox
   RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
