--- a/src/createellipsoid/CMakeLists.txt
+++ b/src/createellipsoid/CMakeLists.txt
@@ -7,7 +7,7 @@ INCLUDE( ${ITK_USE_FILE} )
 
 ADD_EXECUTABLE(pxcreateellipsoid createellipsoid.cxx)
 
-TARGET_LINK_LIBRARIES(pxcreateellipsoid pxcommon ITKBasicFilters ITKIO ITKCommon)
+TARGET_LINK_LIBRARIES(pxcreateellipsoid pxcommon ${ITK_LIBRARIES})
 
 INSTALL( TARGETS pxcreateellipsoid
   RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
