--- a/src/createpointsinimage/CMakeLists.txt
+++ b/src/createpointsinimage/CMakeLists.txt
@@ -7,7 +7,7 @@ INCLUDE( ${ITK_USE_FILE} )
 
 ADD_EXECUTABLE(pxcreatepointsinimage createpointsinimage.cxx)
 
-TARGET_LINK_LIBRARIES(pxcreatepointsinimage ITKIO ITKCommon)
+TARGET_LINK_LIBRARIES(pxcreatepointsinimage ${ITK_LIBRARIES})
 
 INSTALL( TARGETS pxcreatepointsinimage
   RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
