--- a/src/reshape/CMakeLists.txt
+++ b/src/reshape/CMakeLists.txt
@@ -10,7 +10,7 @@ ADD_EXECUTABLE(pxreshape
  itkReshapeImageToImageFilter.h
  itkReshapeImageToImageFilter.txx )
 
-TARGET_LINK_LIBRARIES(pxreshape pxcommon ITKBasicFilters ITKIO ITKCommon)
+TARGET_LINK_LIBRARIES(pxreshape pxcommon ${ITK_LIBRARIES})
 
 INSTALL( TARGETS pxreshape
   RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
