--- a/src/texture/CMakeLists.txt
+++ b/src/texture/CMakeLists.txt
@@ -20,7 +20,7 @@ ADD_EXECUTABLE(pxtexture
  itkGrayLevelCooccurrenceMatrixTextureCoefficientsCalculator.h
  itkGrayLevelCooccurrenceMatrixTextureCoefficientsCalculator.txx )
 
-TARGET_LINK_LIBRARIES(pxtexture pxcommon ITKBasicFilters ITKIO ITKCommon ITKStatistics)
+TARGET_LINK_LIBRARIES(pxtexture pxcommon ${ITK_LIBRARIES})
 
 INSTALL( TARGETS pxtexture
   RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
