--- a/src/getDICOMseriesUIDs/CMakeLists.txt
+++ b/src/getDICOMseriesUIDs/CMakeLists.txt
@@ -7,7 +7,7 @@ INCLUDE( ${ITK_USE_FILE} )
 
 ADD_EXECUTABLE(pxgetDICOMseriesUIDs getDICOMseriesUIDs.cxx)
 
-TARGET_LINK_LIBRARIES(pxgetDICOMseriesUIDs pxcommon ITKIO ITKCommon)
+TARGET_LINK_LIBRARIES(pxgetDICOMseriesUIDs pxcommon ${ITK_LIBRARIES})
 
 INSTALL( TARGETS pxgetDICOMseriesUIDs
   RUNTIME DESTINATION ${PRAXIX_INSTALL_DIR} )
