ENH compile createrandomimage and remove warnings

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -32,7 +32,7 @@ SUBDIRS(
  creategridimage
  # createimage
  createpointsinimage
- #createrandomimage
+ createrandomimage
  createsimplebox
  createsphere
  createzeroimage
